# dovzhyna

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  dovzhyna.c  dovzhyna.cc  dovzhyna.h  dovzhyna.hh  op_basic_info.h  op_basic_info.hh  op_basic_info_0f.h  op_basic_info_0f.hh  test.c  test.cc  x86optab.h
data/: Makefile  x86gentab.c  x86optab.txt
