CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(dovzhyna VERSION 0.0.0 LANGUAGES C)

ADD_LIBRARY(dovzhyna STATIC dovzhyna.c dovzhyna.h)
SET_TARGET_PROPERTIES(dovzhyna PROPERTIES PUBLIC_HEADER "dovzhyna.h")

INSTALL(TARGETS dovzhyna
	ARCHIVE DESTINATION lib
	PUBLIC_HEADER DESTINATION include)

SET(DESCRIPTION "dovzhyna - x86 (IA32) instruction length decoding library")
SET(PACKAGE_NAME "dovzhyna")
SET(AUTHOR "Egor")
